--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pg-promise": "^9.3.5"
+  },
+  "engines": {
+    "node": "10.16.3"
   }
 }
