--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "nodemon": "^2.0.1",
     "pg-promise": "^9.3.5"
   },
   "engines": {
