--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server",
     "dev": "nodemon server",
-    "test": "mocha",
+    "test:unit": "mocha test/unit/*.js",
     "lint": "eslint ."
   },
   "repository": {
@@ -29,7 +29,8 @@
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "sinon": "^7.5.0"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
