--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "nodemon": "^2.0.1",
     "pg-promise": "^9.3.5"
   },
   "engines": {
-    "node": "10.16.3"
+    "node": "12.13.1"
   }
 }
