--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "sinon": "^7.5.0"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.1",
     "pg-promise": "^9.3.5"
   },
