--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.1",
     "pg-promise": "^9.3.5"
   },
