ft(get article & gifs): add get routes and model layer functinality for getting a specific article and dif
also refactor tests to live in subdirectories named by the functinality
that they are testing

[Finishes]

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server",
-    "test:unit": "nyc mocha test/unit/*.js",
+    "test:unit": "nyc mocha --recursive test/unit/",
     "report-coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "lint": "eslint ."
   },
