--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon server",
     "test:unit": "nyc mocha --recursive test/unit/",
+    "test:int": "nyc mocha --recursive test/integration/",
     "report-coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "lint": "eslint ."
   },
@@ -37,6 +38,8 @@
   "dependencies": {
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cloudinary": "^1.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
