--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ node_js:
 cache: npm
 install:
   - npm ci
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database teamwork_test_db;' -U postgres
 script:
-  - npm run test:unit
+  - npm run test
   - npm run report-coverage
