chore(travis.yml): update travis.yml file to reflect updated CI settings

--- a/.env.test.cfg
+++ b/.env.test.cfg
@@ -1,6 +1,6 @@
 NODE_ENV=testing
 DATABASE_URL=postgres://postgres:pgadmin@localhost:5432/teamwork_test_db
-SECRET_KEY=secret
+SECRET_KEY=aafb7aca7693b1345f7b5
 PORT=5000
 CLOUDINARY_CLOUD_NAME=baraka
 CLOUDINARY_API_KEY=617799312228872
