--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server",
-    "test": "nyc mocha --recursive test/",
+    "test": "nyc --reporter=html --reporter=text mocha --recursive test/",
     "test:unit": "nyc mocha --recursive test/unit/",
     "test:int": "nyc mocha --file test/integration/setup.spec.js --recursive test/integration/",
     "report-coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
